[tool.poetry]
name = "pixel_mapper"
version = "0.1.0"
description = ""
authors = ["Andy Knitt"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
lumos = {git = "https://github.com/tonyazzolino/Lumos.git"}
opencv-python = "^4.8.0"
numpy = "^1.26.0"
imutils = "^0.5.4"
scikit-image = "^0.21.0"
matplotlib = "^3.8.0"
playsound = "1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
